--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://faizalgallery.github.io",
+  "homepage": "http://faizalabidin/faizalgallery.github.io",
   "name": "gallery",
   "version": "0.1.0",
   "private": true,
